--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div id="score">score: <p class="ptag">0</p></div>
     <div class="game-container">  
         <h1 class="h1"></h1>
+        <p id="highScore"></p>
         <span><img src="cloud.png" alt=""></span>
         <span><img src="cloud.png" alt=""></span>
         <span><img src="cloud.png" alt=""></span>
-
         <div class="bird"></div>
     </div>
+   
+    <div id="restart" onclick="restart()">restart</div>
 
 <script src="app.js"></script>
 </body>
